Fix resource card image not showing in Safari
Refs #713.

--- a/app/shared/resource-card/_resource-card.scss
+++ b/app/shared/resource-card/_resource-card.scss
@@ -13,6 +13,7 @@
     min-width: 140px;
     max-width: 200px;
     padding: 10px;
+    height: 100%;
     @media (min-width: $screen-xs-min) {
       min-width: 180px;
     }
